--- a/GFHelper/MainWindow.xaml
+++ b/GFHelper/MainWindow.xaml
@@ -122,6 +122,14 @@
                     </GroupBox>
                     <Button Content="好友&#xD;&#xA;电池" HorizontalAlignment="Left" Margin="105,328,0,0" VerticalAlignment="Top" Width="50" Height="50" Click="Button_Click_6" Grid.Column="1"/>
                     <Button Content="好友&#xA;点赞" HorizontalAlignment="Left" Margin="160,328,0,0" VerticalAlignment="Top" Width="50" Height="50" Click="Button_Click_61" Grid.Column="1"/>
+                    <GroupBox x:Name="groupBox_Copy" Header="资料室" HorizontalAlignment="Left" Height="96" Margin="21,159,0,0" VerticalAlignment="Top" Width="161" Grid.ColumnSpan="2">
+                        <Grid HorizontalAlignment="Left" Height="164" Margin="-6,0,-6,-6" VerticalAlignment="Top" Width="237">
+                            <TextBlock x:Name="textBlock2" HorizontalAlignment="Left" Height="16" Margin="10,11,0,0" TextWrapping="Wrap" Text="经验:" VerticalAlignment="Top" Width="30"/>
+                            <TextBlock x:Name="textBlock1_Copy10" HorizontalAlignment="Left" Height="16" Margin="10,31,0,0" TextWrapping="Wrap" Text="电池:" VerticalAlignment="Top" Width="30"/>
+                            <TextBlock x:Name="GlobalEXP" HorizontalAlignment="Left" Height="14" Margin="44,11,0,0" TextWrapping="Wrap" Text="N/A" VerticalAlignment="Top" Width="110"/>
+                            <TextBlock x:Name="BatteryNum" HorizontalAlignment="Left" Height="14" Margin="44,31,0,0" TextWrapping="Wrap" Text="N/A" VerticalAlignment="Top" Width="110"/>
+                        </Grid>
+                    </GroupBox>
                 </Grid>
             </TabItem>
             <TabItem Header="人形建造" Margin="-2,4,-2,-5">
