--- a/GFHelper/MainWindow.xaml
+++ b/GFHelper/MainWindow.xaml
@@ -273,7 +273,9 @@
                                         <ColumnDefinition Width="146*"/>
                                         <ColumnDefinition Width="679*"/>
                                     </Grid.ColumnDefinitions>
-                                    <GroupBox Header="升级选项" HorizontalAlignment="Left" Height="81" Margin="564,10,0,0" VerticalAlignment="Top" Width="210" Grid.Column="1"/>
+                                    <GroupBox Header="梯队勾选" HorizontalAlignment="Left" Height="188" Margin="564,10,0,0" VerticalAlignment="Top" Width="210" Grid.Column="1">
+                                        <Label x:Name="BattleTeamsLabel" Content="" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
+                                    </GroupBox>
                                     <Label Content="地图 :" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontSize="24"/>
                                     <ComboBox x:Name="Task1Map" VerticalAlignment="Top" Width="164" Margin="86,14,0,0" Height="36" HorizontalAlignment="Left" FontSize="18" Grid.ColumnSpan="2">
                                         <ComboBoxItem Content="5-2N"/>
@@ -288,19 +290,18 @@
                                         <ComboBoxItem Content="10_4E"/>
                                         <ComboBoxItem Content="3_4N"/>
                                     </ComboBox>
-                                    <Label Content="主梯队 :" HorizontalAlignment="Left" Margin="87,10,0,0" VerticalAlignment="Top" FontSize="24" Grid.Column="1"/>
-                                    <Label Content="辅梯队 :" HorizontalAlignment="Left" Margin="87,51,0,0" VerticalAlignment="Top" FontSize="24" Grid.Column="1"/>
+                                    <Label Content="梯队 :" HorizontalAlignment="Left" Margin="87,10,0,0" VerticalAlignment="Top" FontSize="24" Grid.Column="1"/>
                                     <ComboBox x:Name="Task1MT" VerticalAlignment="Top" Width="164" Margin="187,14,0,0" Height="36" HorizontalAlignment="Left" FontSize="18" Grid.Column="1" SelectionChanged="Task1MT_SelectionChanged"/>
-                                    <ComboBox x:Name="Task1ST1" VerticalAlignment="Top" Width="164" Margin="187,55,0,0" Height="36" HorizontalAlignment="Left" FontSize="18" Grid.Column="1"/>
                                     <Button Content="开始" Grid.Column="1" HorizontalAlignment="Left" Margin="724,321,0,0" VerticalAlignment="Top" Width="50" Click="Button_Click_7" Height="50"/>
-                                    <Grid Grid.ColumnSpan="2" HorizontalAlignment="Left" Height="98" Margin="10,55,0,0" VerticalAlignment="Top" Width="719">
+                                    <Grid Grid.ColumnSpan="2" HorizontalAlignment="Left" Height="120" Margin="15,78,0,0" VerticalAlignment="Top" Width="719">
                                         <Label x:Name="GUN_1_name" Content="GUN_1" HorizontalAlignment="Left" Margin="10,50,0,0" VerticalAlignment="Top" Height="48" Width="100" FontSize="24"/>
                                         <Label x:Name="GUN_2_name" HorizontalAlignment="Left" Margin="150,50,0,0" VerticalAlignment="Top" Height="48" Width="105" FontSize="24" Content="GUN_2"/>
                                         <Label x:Name="GUN_3_name" Content="GUN_3" HorizontalAlignment="Left" Margin="295,50,0,0" VerticalAlignment="Top" Height="48" Width="105" FontSize="24"/>
                                         <Label x:Name="GUN_4_name" Content="GUN_4" HorizontalAlignment="Left" Margin="440,50,0,0" VerticalAlignment="Top" Height="48" Width="100" FontSize="24"/>
                                         <Label x:Name="GUN_5_name" Content="GUN_5" HorizontalAlignment="Left" Margin="574,50,0,0" VerticalAlignment="Top" Height="48" Width="100" FontSize="24"/>
-                                        <Label Content="主梯队效能：" HorizontalAlignment="Left" Margin="10,103,0,-45" VerticalAlignment="Top" FontSize="24"/>
-                                        <TextBox x:Name="Task1TeamE" HorizontalAlignment="Left" Height="40" Margin="150,103,0,-45" TextWrapping="Wrap" VerticalAlignment="Top" Width="106" TextAlignment="Center" FontSize="24" BorderThickness="0" Background="{x:Null}"/>
+                                        <Label Content="梯队效能：" HorizontalAlignment="Left" Margin="6,-8,0,0" VerticalAlignment="Top" FontSize="24"/>
+                                        <TextBox x:Name="Task1TeamE" HorizontalAlignment="Left" Height="40" Margin="125,-8,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="106" TextAlignment="Center" FontSize="24" BorderThickness="0" Background="{x:Null}"/>
+                                        <Button Content="选" Margin="689,90,0,0" VerticalAlignment="Top" Height="30" Click="Button_Click_11" HorizontalAlignment="Left" Width="30"/>
                                     </Grid>
                                     <RadioButton x:Name="GUN1_MVP" Content="MVP" HorizontalAlignment="Left" Margin="125,107,0,0" VerticalAlignment="Top" FontSize="10"/>
                                     <RadioButton x:Name="GUN2_MVP" Content="MVP" HorizontalAlignment="Left" Margin="99,107,0,0" VerticalAlignment="Top" FontSize="10" Grid.Column="1"/>
@@ -314,6 +315,7 @@
                                     <Label Grid.ColumnSpan="2" Content="捞饼的主力梯队需要有空降需要有空降需要有空降。捞饼有很大几率卡死BUG。具体看log记录。10_4E推荐配置IWS加绿毛" HorizontalAlignment="Left" Height="71" Margin="29,247,0,0" VerticalAlignment="Top" Width="836"/>
                                     <Label Content="循环次数:" Grid.Column="1" HorizontalAlignment="Left" Margin="356,45,0,0" VerticalAlignment="Top"/>
                                     <TextBox x:Name="BattleMaxLoopTime" HorizontalAlignment="Left" Height="17" Margin="414,47,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="62" TextAlignment="Center" FontSize="10" BorderThickness="0" Background="{x:Null}" Grid.Column="1"/>
+                                    <Button Content="清" Grid.Column="1" HorizontalAlignment="Left" Margin="739,163,0,0" VerticalAlignment="Top" Width="30" Height="30" Click="Button_Click_12"/>
                                 </Grid>
                             </Grid>
                         </TabItem>
